<resources>
    <string name="app_name">LoginForm</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Login Now</string>
    <string name="hint_account">Do not you have an account ?</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
</resources>
