<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
            android:id="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="22dp"
            android:gravity="center"
            android:paddingTop="50dp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
            android:id="@+id/input_name"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:gravity="center_vertical"
            android:background="@drawable/edit_text"
            android:padding="13dp"
            android:layout_margin="10dp" />
    </android.support.design.widget.TextInputLayout>
    <EditText
            android:id="@+id/input_password"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:padding="13dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text"/>

    <Button android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_login"
            android:background="@drawable/edit_text"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:padding="15dp"
            android:layout_margin="10dp" />
    <TextView
            android:id="@+id/txtviewDyryp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Do you remember your password ?"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/txtviewConnWiFac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connect with Facebook"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_vertical|center"
        android:drawableLeft="@drawable/logo_facebook"
        android:drawablePadding="15dp"
        android:singleLine="true"
        android:layout_marginTop="13dp"
        android:textStyle="bold"
        android:layout_margin="35dp"
        />
</LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/txtviewDoNYHA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_account"
            android:textSize="13sp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:id="@+id/txtviewSiU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="13sp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            />

    </RelativeLayout>


</RelativeLayout>
